Design: 메뉴바를 지도 위로, 지도 사이즈 조정

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
         <link rel="apple-touch-icon" href="" />
 
         <link rel="manifest" href="" />
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bcd37394ebc4ade86f7b776044e43305"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=86b53d237666e6d6443144e4be6da1c7
+        "></script>
         <title>거기날씨</title>
     </head>
     <body>
