Chore: 충돌 해결중

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,7 @@
         <link rel="apple-touch-icon" href="" />
 
         <link rel="manifest" href="" />
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=86b53d237666e6d6443144e4be6da1c7
-        "></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_API_KEY%"></script>
         <title>거기날씨</title>
     </head>
     <body>
