--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
         <link rel="apple-touch-icon" href="" />
 
         <link rel="manifest" href="" />
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bcd37394ebc4ade86f7b776044e43305"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%"></script>
         <title>거기날씨</title>
     </head>
     <body>
