--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,8 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Web site created using create-react-app" />
         <link rel="apple-touch-icon" href="" />
-
         <link rel="manifest" href="" />
-        <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_API_KEY%"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_API_KEY%"></script>
         <title>거기날씨</title>
     </head>
     <body>
