--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,10 @@
         <meta name="description" content="Web site created using create-react-app" />
         <link rel="apple-touch-icon" href="" />
         <link rel="manifest" href="" />
-
+        <!-- 파비콘 -->
+        <link rel=" shortcut icon" href="img/favicon-16x16.png">
+        <link rel="icon" href="img/favicon-16x16.png">
+        <!-- 지도 API -->
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%"></script>
 
         <title>거기날씨</title>
