Revert "[Client] Write.js, P/R리뷰필요, PageEdit.js, 작업중"

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <!-- <link rel="icon" href="" /> -->
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
-        <link rel="apple-touch-icon" href="" />
-        <link rel="manifest" href="" />
-        <!-- 파비콘 -->
-        <link rel=" shortcut icon" href="img/favicon-16x16.png">
-        <link rel="icon" href="img/favicon-16x16.png">
-        <!-- 지도 API -->
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%"></script>
-
-        <title>거기날씨</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="" />
+  
+    <link rel="manifest" href="" />
+    
+    <title>거기날씨</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+   
+  </body>
 </html>
