[Client]write.js / 기능구현 완료

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
         <!-- 지도 API -->
         <script
             type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=56da23e85568f5cc18b76765c5e2e6fb"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=56da23e85568f5cc18b76765c5e2e6fb&libraries=services,clusterer,drawing"
         ></script>
 
         <title>거기날씨</title>
