--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,10 @@
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=56da23e85568f5cc18b76765c5e2e6fb&libraries=services,clusterer,drawing"
         ></script>
-
+        <!-- kakao login -->
+        <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+        <script>Kakao.init("beca1397cc97235489f14c2d7119071d");</script>
+        
         <title>거기날씨</title>
     </head>
     <body>
